# conivel

./: .gitignore  README.md  compare_retriever_runs.py  metrics_inference_sents_nb.py  metrics_kfolds.py  nerviz.js  nerviz.py  oracle_dists.json  plot_chapter_vs_book.py  plot_chapter_vs_full.py  plot_dekker_books_len.py  plot_dist.py  plot_mean_test_f1.py  plot_mean_test_metrics.py  plot_n_comparison.py  plot_per_book_scores.py  prez_plot_7b_vs_13b.py  pyproject.toml  requirements.txt  sort_neural_context_xps.py  sort_xps.py  train_reranker.py  xp.py  xp_bare.py  xp_bare_thg.py  xp_classes_errors.py  xp_classes_nb.py  xp_dist.py  xp_embeddings.py  xp_heuristics.py  xp_ideal_neural_retriever.py  xp_ideal_neural_retriever_thg.py  xp_kfolds.py  xp_kfolds_combinations.py  xp_kfolds_inference_sents_nb.py  xp_kfolds_list.py  xp_kfolds_neural.py  xp_kfolds_neural_gen.py  xp_kfolds_thg.py  xp_monobert.py  (+12 more)
conivel/: analysis.py  predict.py  score.py  train.py  utils.py
conivel/datas/: __init__.py  context.py  datas.py  dataset.py  dataset_utils.py  ontonotes.py  the_elder_scrolls_names.json
conivel/datas/conll/: __init__.py  conll.py  test.txt  test2.txt  train.txt  train2.txt  valid.txt  valid2.txt
conivel/datas/dekker/: __init__.py  dekker.py
conivel/datas/the_hunger_games/: __init__.py  the_hunger_games.py
runs/short/after/: config.json  cout.txt  metrics.json  run.json
runs/short/bare/: config.json  cout.txt  metrics.json  run.json
runs/short/before/: config.json  cout.txt  (+2 more)
tests/: strategies.py  test_context.py  test_datas.py  test_dataset.py  test_predict.py
(+215 files in other folders)
